[package]
name = "charybdis_bench"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"
charybdis = { path = "../charybdis" }
chrono = "0.4.39"
scylla = "1.1.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }


[[bench]]
name = "orm_vs_native"
harness = false
[dependencies]
futures = "0.3.31"