[package]
name = "charybdis_macros"
rust-version = "1.75.0"
version = "0.7.10"
edition = "2021"
description = "Proc macro crate for Charybdis ORM"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
charybdis_parser = { version = "0.7.10", path = "../charybdis-parser" }
proc-macro2 = "1.0.81"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"

[dev-dependencies]
charybdis = "0.7.2"
scylla = "0.15.1"
