[package]
name = "charybdis_macros"
rust-version = "1.75.0"
version = "0.7.14"
edition = "2021"
description = "Proc macro crate for Charybdis ORM"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
charybdis_parser = { version = "0.7.14", path = "../charybdis-parser" }
proc-macro2 = "1.0.81"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"

[dev-dependencies]
charybdis = { version = "0.7.14", path = "../charybdis" }
scylla = "1.0.0"
chrono = "0.4.38"

[lints]
workspace = true
