[package]
name = "charybdis-migrate"
rust-version = "1.75.0"
version = "0.7.5"
edition = "2021"
description = "Automatic Migration Tool for Charybdis ORM"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"
categories = ["database"]

[dependencies]
charybdis_parser = { version = "0.7.5", path = "../charybdis-parser" }
scylla = { version = "0.13.1", features = ["ssl"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
colored = "2.1.0"
strip-ansi-escapes = "0.2.0"
clap = { version = "4.5.9", features = ["derive", "string"] }
regex = "1.10.5"
openssl = "0.10.64"

[lib]
name = "migrate"
path = "src/lib.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"
