[package]
name = "charybdis_parser"
rust-version = "1.75.0"
version = "0.5.4"
edition = "2021"
description = "Parser crate for Charybdis ORM"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"
categories = ["database"]

[dependencies]
proc-macro2 = "1.0.81"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
serde = { version = "1.0.200", features = ["derive"] }
scylla = "0.13.0"
serde_json = "1.0.116"
colored = { version = "2.1.0", features = [] }
walkdir = "2.5.0"
darling = "0.20.8"
strum = "0.26"
strum_macros = "0.26"
