[package]
name = "charybdis"
rust-version = "1.75.0"
version = "0.5.4"
edition = "2021"
description = "High-Performance ORM for ScyllaDB"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charybdis_macros = { version = "0.5.4", path = "../charybdis-macros" }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
num-bigint = "0.4.4"
scylla = { version = "0.12.0", features = ["full-serialization"] }
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
colored = "2.1.0"
bigdecimal = { version = "0.4.3", features = ["serde"] }
