[package]
name = "charybdis"
rust-version = "1.75.0"
version = "0.7.14"
edition = "2021"
description = "High-Performance ORM for ScyllaDB"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charybdis-migrate = { version = "0.7.14", path = "../charybdis-migrate", optional = true }
charybdis_macros = { version = "0.7.14", path = "../charybdis-macros" }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
scylla = { version = "1.0.0", features = ["full-serialization"] }
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
colored = "2.1.0"
bigdecimal = { version = "0.4.3", features = ["serde"] }


[features]
migrate = ["charybdis-migrate"]

[dev-dependencies]
tokio = "1.42.0"
strum = { version = "0.26.3", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"

[lints]
workspace = true
