[package]
name = "charybdis_macros"
rust-version = "1.75.0"
version = "0.4.0"
edition = "2021"
description = "Proc macro crate for Charybdis ORM"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
charybdis_parser = { version = "0.4.0", path = "../charybdis_parser" }
proc-macro2 = "1.0.64"
syn = { version = "2.0.10", features = ["full"] }
quote = "1.0.26"
darling = "0.20.3"
