[package]
name = "charybdis_parser"
rust-version = "1.75.0"
version = "0.2.2"
edition = "2021"
description = "Parser crate for Charybdis ORM"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"

[dependencies]
proc-macro2 = "1.0.64"
syn = { version = "2.0.10", features = ["full"] }
quote = "1.0.26"
serde = { version = "1.0.189", features = ["derive"] }
scylla = "0.12.0"
serde_json = "1.0.107"
colored = { version = "2.0.0", features = [] }
walkdir = "2.4.0"
darling = "0.20.3"
